根据新的yaml文件生成的client端代码
